tests/js/valid/tags/parses/type-5.buri
Hello = #hello(--comment
Int
--comment
,
--comment
[Str]
--comment
)