tests/js/invalid/tag/mismatched-types-2.buri
wrapper: #wrapper(Str) = #wrapper(1)